--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 
         <org.springframework.version>4.3.8.RELEASE</org.springframework.version>
-        <!--<org.springframework.version>3.0.3.RELEASE</org.springframework.version>-->
         <org.mybatis.version>3.4.1</org.mybatis.version>
         <org.mybatis.spring.version>1.3.0</org.mybatis.spring.version>
+
+        <log4j2.version>2.8.2</log4j2.version>
     </properties>
 
     <dependencies>
@@ -130,12 +131,19 @@
         </dependency>
         <!-- mybatis end -->
 
-
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba.druid/druid-wrapper -->
+        <dependency>
+            <groupId>com.alibaba.druid</groupId>
+            <artifactId>druid-wrapper</artifactId>
+            <version>0.2.9</version>
+        </dependency>
+
 
         <!-- web begin -->
         <!--<dependency>
@@ -156,6 +164,27 @@
             <version>1.2</version>
         </dependency>
         <!-- web end -->
+
+
+
+
+        <!-- log4j2 begin -->
+        <!--<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>-->
+        <!-- log4j2 end -->
 
 
     </dependencies>
